force-app/main/default/objects/EventInviteResponse__c/EventInviteResponse__c.object-meta.xml
<CustomObject>
    <label>Event Invite Response</label>
    <nameField>
        <displayFormat>EIR-{000000}</displayFormat>
        <label>Event Invite Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Invite Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>