force-app/main/default/objects/EventInviteResponse__c/fields/event_invite__c.field-meta.xml
<CustomField>
    <fullName>event_invite__c</fullName>
    <inlineHelpText>The event invite this response is in regard to.</inlineHelpText>
    <label>Event Invite</label>
    <referenceTo>EventInvite__c</referenceTo>
    <relationshipLabel>Event Invite Responses</relationshipLabel>
    <relationshipName>Event_Invite_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>