force-app/main/default/objects/EventInviteResponse__c/fields/Invite_Source__c.field-meta.xml
<CustomField>
    <fullName>Invite_Source__c</fullName>
    <defaultValue>&quot;Company&quot;</defaultValue>
    <inlineHelpText>This tells us the source of the invite. Either we (Company) sent the invite, or one of the invitees added another invitee on the Invite Detail Page, or the invitee forwarded the email to another who accepted the invite.</inlineHelpText>
    <label>Invite Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Added Via Invite</fullName>
            </value>
            <value>
                <fullName>Email Forward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>