force-app/main/default/objects/EventInviteResponse__c/fields/Invite_URL__c.field-meta.xml
<CustomField>
    <fullName>Invite_URL__c</fullName>
    <formula>HYPERLINK($Setup.Calendar_Invite__c.Site_URL__c &amp; &quot;?eirId=&quot; &amp; CASESAFEID(Id), &quot;Invite Link&quot;)</formula>
    <label>Invite URL</label>
    <type>Text</type>
</CustomField>