force-app/main/default/objects/EventInviteResponse__c/fields/Invitee__c.field-meta.xml
<CustomField>
    <fullName>Invitee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the person for whom this invite response applies.</inlineHelpText>
    <label>Invitee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Invite Responses</relationshipLabel>
    <relationshipName>Event_Invite_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>