force-app/main/default/objects/EventInviteResponse__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <defaultValue>&quot;Not Responded&quot;</defaultValue>
    <inlineHelpText>This shows the event invitee&apos;s response: Accepted = Yes going, Undecided = Maybe going, Declined = No not going, Not Responded = Invitee has not yet chosen a response. If invite was canceled by Salesforce user this will show &quot;Canceled&quot;</inlineHelpText>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Not Responded</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>