force-app/main/default/objects/EventInviteResponse__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <inlineHelpText>The date/time the response was last updated.</inlineHelpText>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>