force-app/main/default/objects/EventInviteResponse__c/fields/Response_Note__c.field-meta.xml
<CustomField>
    <fullName>Response_Note__c</fullName>
    <inlineHelpText>This is a note from the respondent in regard to their response.</inlineHelpText>
    <label>Response Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>